--- a/src/front/VentanaPrincipal.form
+++ b/src/front/VentanaPrincipal.form
@@ -19,34 +19,30 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="-2" pref="215" max="-2" attributes="0"/>
-              <Component id="btn_resetSim" min="-2" pref="190" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-              <Component id="btn_configuracion" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-              <Component id="btn_simular" min="-2" pref="151" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-          </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jTabbedPane1" max="32767" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
+                      <Component id="lblResultado" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="30" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Component id="jTabbedPane1" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                  </Group>
+              </Group>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
-              <Component id="jTabbedPane1" min="-2" pref="803" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="btn_resetSim" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btn_simular" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="btn_configuracion" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+              <Component id="jTabbedPane1" min="-2" pref="803" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+              <Component id="lblResultado" min="-2" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -74,17 +70,23 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Component id="jPanelProb" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
-                          </Group>
+                          <Component id="jPanelProb" min="-2" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="jPanelParametros" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                               <Component id="gpb_consultas" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
                           </Group>
                       </Group>
+                      <EmptySpace pref="8" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="btn_resetSim" min="-2" pref="190" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                      <Component id="btn_configuracion" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                      <Component id="btn_simular" min="-2" pref="151" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -93,7 +95,13 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
                       <Component id="jPanelProb" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="btn_resetSim" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btn_simular" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btn_configuracion" alignment="3" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="gpb_consultas" min="-2" max="-2" attributes="0"/>
                           <Component id="jPanelParametros" min="-2" max="-2" attributes="0"/>
@@ -295,11 +303,11 @@
                               <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="txt_rango_desde" min="-2" pref="99" max="-2" attributes="0"/>
+                              <Component id="txt_reloj_desde" min="-2" pref="99" max="-2" attributes="0"/>
                               <EmptySpace pref="41" max="32767" attributes="0"/>
                               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="txt_rango_hasta" min="-2" pref="99" max="-2" attributes="0"/>
+                              <Component id="txt_cant_filas" min="-2" pref="99" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                           </Group>
                       </Group>
@@ -311,8 +319,8 @@
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="txt_rango_desde" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="txt_rango_hasta" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="txt_reloj_desde" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="txt_cant_filas" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                           </Group>
@@ -322,17 +330,17 @@
                   <SubComponents>
                     <Component class="javax.swing.JLabel" name="jLabel1">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Rango desde:"/>
+                        <Property name="text" type="java.lang.String" value="Reloj desde:"/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JLabel" name="jLabel2">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Rango hasta:"/>
+                        <Property name="text" type="java.lang.String" value="Cantidad filas:"/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JTextField" name="txt_rango_desde">
+                    <Component class="javax.swing.JTextField" name="txt_reloj_desde">
                     </Component>
-                    <Component class="javax.swing.JTextField" name="txt_rango_hasta">
+                    <Component class="javax.swing.JTextField" name="txt_cant_filas">
                     </Component>
                   </SubComponents>
                 </Container>
@@ -384,18 +392,12 @@
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="3" rowCount="2">
-                            <Column editable="false" title="Post Atencion" type="java.lang.Object">
+                            <Column editable="false" title="Post Atencion" type="java.lang.String">
                               <Data value="Se retira"/>
                               <Data value="Se queda"/>
                             </Column>
-                            <Column editable="true" title="Probabilidad" type="java.lang.Object">
-                              <Data value=""/>
-                              <Data value=""/>
-                            </Column>
-                            <Column editable="true" title="Probabilidad Acumulada" type="java.lang.Object">
-                              <Data value=""/>
-                              <Data value=""/>
-                            </Column>
+                            <Column editable="true" title="Probabilidad" type="java.lang.Object"/>
+                            <Column editable="true" title="Probabilidad Acumulada" type="java.lang.Object"/>
                           </Table>
                         </Property>
                       </Properties>
@@ -413,21 +415,13 @@
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                           <Table columnCount="3" rowCount="3">
-                            <Column editable="false" title="Tipo de Atencion" type="java.lang.Object">
-                              <Data value="Pedido de libros"/>
-                              <Data value="Devolucion de libros"/>
-                              <Data value="Consulta "/>
+                            <Column editable="false" title="Tipo de Atencion" type="java.lang.String">
+                              <Data value="Pedir Libros"/>
+                              <Data value="Devoluci&#xf3;n Libros"/>
+                              <Data value="Consulta"/>
                             </Column>
-                            <Column editable="true" title="Probabilidad" type="java.lang.Object">
-                              <Data value=""/>
-                              <Data value=""/>
-                              <Data value=""/>
-                            </Column>
-                            <Column editable="true" title="Probabilidad Acumulada" type="java.lang.Object">
-                              <Data value=""/>
-                              <Data value=""/>
-                              <Data value=""/>
-                            </Column>
+                            <Column editable="true" title="Probabilidad" type="java.lang.Object"/>
+                            <Column editable="true" title="Probabilidad Acumulada" type="java.lang.Object"/>
                           </Table>
                         </Property>
                       </Properties>
@@ -436,6 +430,33 @@
                 </Container>
               </SubComponents>
             </Container>
+            <Component class="javax.swing.JButton" name="btn_configuracion">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Setear configuracion por defecto"/>
+              </Properties>
+              <AccessibilityProperties>
+                <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Setear configuraci&#xf3;n por defecto"/>
+              </AccessibilityProperties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_configuracionActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="btn_simular">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Simular"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_simularActionPerformed"/>
+              </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="btn_resetSim">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Limpiar Parametros"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_resetSimActionPerformed"/>
+              </Events>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JScrollPane" name="jScrollPaneSimulacion">
@@ -449,7 +470,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="jTable1">
+            <Component class="javax.swing.JTable" name="tablaSimulacion">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="4" rowCount="4">
@@ -487,29 +508,7 @@
         </Container>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="btn_simular">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Simular"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="btn_resetSim">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Eliminar Simulacion"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_resetSimActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="btn_configuracion">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Setear configuracion por defecto"/>
-      </Properties>
-      <AccessibilityProperties>
-        <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Setear configuraci&#xf3;n por defecto"/>
-      </AccessibilityProperties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_configuracionActionPerformed"/>
-      </Events>
+    <Component class="javax.swing.JLabel" name="lblResultado">
     </Component>
   </SubComponents>
 </Form>
